--- a/src/Skybrud.Essentials.Http/Skybrud.Essentials.Http.csproj
+++ b/src/Skybrud.Essentials.Http/Skybrud.Essentials.Http.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <DocumentationFile>bin\Release\$(TargetFramework)\Skybrud.Essentials.Http.xml</DocumentationFile>
+    <DocumentationFile>bin\$(ConfigurationName)\$(TargetFramework)\Skybrud.Essentials.Http.xml</DocumentationFile>
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
