--- a/src/Skybrud.Essentials.Http/Skybrud.Essentials.Http.csproj
+++ b/src/Skybrud.Essentials.Http/Skybrud.Essentials.Http.csproj
@@ -29,11 +29,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
-    <DefineConstants>NET_STANDARD,NET_STANDARD2</DefineConstants>
+    <DefineConstants>NET_STANDARD,NET_STANDARD2,NET_FRAMEWORK_OR_NET_STANDARD_2</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='net45' OR '$(TargetFramework)'=='net46' OR '$(TargetFramework)'=='net47'">
-    <DefineConstants>NET_FRAMEWORK</DefineConstants>
+    <DefineConstants>NET_FRAMEWORK,NET_FRAMEWORK_OR_NET_STANDARD_2</DefineConstants>
   </PropertyGroup>
   
   <ItemGroup>
