--- a/src/UnitTestProject1/UnitTestProject1.csproj
+++ b/src/UnitTestProject1/UnitTestProject1.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HttpQueryStringTests.cs" />
     <Compile Include="OAuthClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
