--- a/src/UnitTestProject1/UnitTestProject1.csproj
+++ b/src/UnitTestProject1/UnitTestProject1.csproj
@@ -48,6 +48,7 @@
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HttpQueryStringTests.cs" />
