--- a/src/Skybrud.Essentials.Http/Skybrud.Essentials.Http.csproj
+++ b/src/Skybrud.Essentials.Http/Skybrud.Essentials.Http.csproj
@@ -36,11 +36,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
-    <DefineConstants>NET_STANDARD,NET_STANDARD2,NET_FRAMEWORK_OR_NET_STANDARD_2</DefineConstants>
+    <DefineConstants>NET_STANDARD,NET_STANDARD2,NET_FRAMEWORK_OR_NET_STANDARD_2,NAME_VALUE_COLLECTION</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='net45' OR '$(TargetFramework)'=='net46' OR '$(TargetFramework)'=='net47'">
-    <DefineConstants>NET_FRAMEWORK,NET_FRAMEWORK_OR_NET_STANDARD_2</DefineConstants>
+    <DefineConstants>NET_FRAMEWORK,NET_FRAMEWORK_OR_NET_STANDARD_2,NAME_VALUE_COLLECTION</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
